Lesson2/k8s/deployment.yaml
# Deployment cho backend
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ttldlinhtm/be_vms:latest  
        ports:
        - containerPort: 5000

---
# Service cho backend
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000 # Port của backend
  type: ClusterIP

---
# Deployment cho frontend
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ttldlinhtm/fe_vms:latest
        ports:
        - containerPort: 80  

---
# Service cho frontend
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80  
      nodePort: 32731
  selector:
    app: frontend
